Add tabs and carosuel to project page

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,1 +1,23 @@
-<h1>Project</h1>
+<div>
+   <carosuel></carosuel>
+</div>
+
+<section class="container">
+    <tabs>
+        <!-- display all the projects -->
+        <pane title="Projects">
+        </pane>
+
+        <!-- display the current active project -->
+        <pane title="Current Project">
+        </pane>
+
+        <!-- display the graphs for the active project -->
+        <pane title="Graph"></pane>
+
+        <!-- add a new project -->
+        <pane title="Add New Projects">
+        </pane>
+
+    </tabs>
+</section>
