List all projects currently in the applications

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -6,6 +6,7 @@
     <tabs>
         <!-- display all the projects -->
         <pane title="Projects">
+            <project-list></project-list>
         </pane>
 
         <!-- display the current active project -->
