Create form directive, impl add project feature

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -18,6 +18,7 @@
 
         <!-- add a new project -->
         <pane title="Add New Projects">
+            <project-form project="" ></project-form>
         </pane>
 
     </tabs>
