--- a/app/components/tabs/tabs.html
+++ b/app/components/tabs/tabs.html
@@ -1,5 +1,5 @@
 <div class="tabbable">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs margin-bot-2">
         <li ng-repeat="pane in panes" ng-class="{active:pane.selected}">
             <a href="" ng-click="select(pane)">{{pane.title}}</a>
         </li>
