Implement "current proejct" tab (view details)

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,4 +1,5 @@
 <!-- START THE FEATURETTES -->
+<!-- todo: fix margin -->
 <div class="container margin-top">
     <hr class="featurette-divider">
 
