--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,4 +1,5 @@
 <!-- Three columns of text below the carousel -->
+<!-- todo: fix margin -->
 <div class="container margin-top">
 
     <div class="row">
