--- a/app/views/project.html
+++ b/app/views/project.html
@@ -11,6 +11,7 @@
 
         <!-- display the current active project -->
         <pane title="Current Project">
+            <project-info></project-info>
         </pane>
 
         <!-- display the graphs for the active project -->
