Import jointJS libraries. create nav tab for graph
Remove "graph" panel, for whatever reason it does not
work with graph. Application is sligty less responsive
but at least it works! Will revisited this later

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -16,8 +16,11 @@
             <project-info></project-info>
         </pane>
 
-        <!-- display the graphs for the active project -->
-        <pane title="Graph"></pane>
+        <!-- display graph -->
+        <!-- TODO: get jointJS to work wth tabs/pane -->
+
+        <!-- display issue tickets -->
+        <pane title="Issue Tickets"></pane>
 
         <!-- add a new project -->
         <pane title="Add New Projects">
