Fix about/contact margins, closer to nav now

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,8 +1,5 @@
 <!-- START THE FEATURETTES -->
-<!-- todo: fix margin -->
-<div class="container margin-top">
-    <hr class="featurette-divider">
-
+<div class="container">
     <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span
