--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,6 +1,5 @@
 <!-- Three columns of text below the carousel -->
-<!-- todo: fix margin -->
-<div class="container margin-top">
+<div class="container ">
 
     <div class="row">
         <div class="col-md-6">
