Add hover effects on joint-graph options

--- a/app/components/buttons/run/run-button.html
+++ b/app/components/buttons/run/run-button.html
@@ -1,4 +1,4 @@
-<button class="btn"
+<button class="btn hvr-overline-from-center"
         ng-click="toggleRunBtn(run,stop)"
         ng-class="getBtnClass()">
 
