Add hover effects on joint-graph options

--- a/app/components/buttons/run/run-button.html
+++ b/app/components/buttons/run/run-button.html
@@ -1,10 +1,10 @@
-<button class="btn"
+<button class="btn btn-default"
         ng-click="toggleRunBtn(run,stop)"
-        ng-class="getBtnClass()">
+        ng-class="getBtnClass()"
+        type="button">
 
     <span>{{displayBtnText(run)}}</span>
-
-    <i class="fa fa-cog fa-2x fa-fw"
+    <i class="fa fa-cog fa-fw fa-3x"
        ng-class="getIconClass()">
     </i>
 </button>
