Add draggable images/ui to graph

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -58,3 +58,9 @@ active-widget.navbar-text {
 section {
     min-height: 40em;
 }
+
+/* for the joint graph image items (the one where you drag down to create a node*/
+._item {
+    width: 120px;
+    height: 40px;
+}
