--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -278,8 +278,32 @@ section {
     fill-opacity: .3;
 }
 
-.bar{
+.bar {
     stroke: none;
     fill: steelblue;
+}
+
+
+
+/* Scatter Plot (Overview side option) */
+.highlight{
+    stroke: #000;
+    stroke-width: 4;
+}
+
+.toolTip {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: absolute;
+    display: none;
+    width: auto;
+    height: auto;
+    background: none repeat scroll 0 0 white;
+    border: 0 none;
+    border-radius: 8px 8px 8px 8px;
+    box-shadow: -3px 3px 15px #888888;
+    color: black;
+    font: 12px sans-serif;
+    padding: 5px;
+    text-align: center;
 }
 
