impl letter frequncy hBarCart

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -285,7 +285,7 @@ section {
 
 
 
-/* Scatter Plot (Overview side option) */
+/* Scatter Plot + hBarChart (Overview side option) */
 .highlight{
     stroke: #000;
     stroke-width: 4;
@@ -306,4 +306,32 @@ section {
     padding: 5px;
     text-align: center;
 }
+
+text {
+    font: 10px sans-serif;
+    color: white;
+}
+text.value {
+    font-size: 120%;
+    fill: white;
+}
+
+.axisHorizontal path{
+    fill: none;
+}
+
+.axisHorizontal .tick line {
+    stroke-width: 1;
+    stroke: rgba(0, 0, 0, 0.2);
+}
+
+.bar {
+    fill: steelblue;
+    fill-opacity: .9;
+}
+
+.bar:hover {
+    fill: #ff232d;
+}
+
 
